--- a/my_site/package.json
+++ b/my_site/package.json
@@ -2,14 +2,19 @@
   "name": "my_site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xiaotianzou.github.io/my_site",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-cropper": "^0.5.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
@@ -18,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
